# demo

./: Dockerfile  README.MD  pyproject.toml
.devcontainer/: Dockerfile
assets/: data.pkl  knn_model.pkl  pred.pkl
demo/: __main__.py
demo/scripts/: __init__.py  path.py  predict.py  train.py
test/: stress.py
